feat: implement open/hide functionality for side panel and configured eslint

--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint scripts/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "prettier": "^3.6.2"
   }
 }
